--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
   --primary-color: rgb(17, 86, 102);
   --primary-color-darker: rgb(9, 48, 56);
   --primary-color-light: rgb(210, 226, 230);
-  --green: rgba(62, 221, 89, 0.671);
+  --green: rgb(0, 219, 135);
   --green-darker: rgb(7, 161, 32);
   --yellow: rgba(225, 240, 23, 0.493);
   --yellow-darker: rgba(255, 238, 0, 0.959);
@@ -23,7 +23,7 @@ body {
   margin: 0;
   padding: 0;
   background: var(--primary-color);
-  font-family: 'Open sans', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.3em;
   line-height: 1.5em;
 }
@@ -70,6 +70,9 @@ li {
 }
 
 .del-button {
+  position: absolute;
+  left: 89%;
+  
   color: var(--dark);
   font-size: 12px;
   padding: 8px;
@@ -91,6 +94,10 @@ li {
   display: flex;
   justify-content: center;
   flex-direction: column;
+}
+
+li {
+  position: relative;
 }
 
 li:hover {
